<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegisterTest</string>
    <string name="action_settings">Settings</string>
    <string name="tVbiaoti">欢迎注册！</string>
    <string name="tVname">用户名：</string>
    <string name="tVbnwk">不能为空</string>
     <string name="tVpsd">密码：</string>
     <string name="tVpsd2">确认密码：</string>
     <string name="tVgender">性别：</string>
     <string name="male">男</string>
     <string name="female">女</string>
     <string name="Btncity">所在地</string>
     <string name="Btnregister">注册</string>
     <string name="tVtishi">6~15位</string>
     <string name="result_title">恭喜您，注册成功</string>
     <string name="result_name">您的用户名为：</string>

     <string name="result_psd">您的密码为：</string>
      <string name="result_gender">您的性别为：</string>
       <string name="result_city">您的所在地为：</string>
    <string name="title_activity_result">ResultActivity</string>
        <string name="select">选择城市</string>

</resources>