<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="#ff0000"
        android:text="@string/result_title"
        android:textSize="24sp" />
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resultName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000ff"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_psd"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resultPsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000ff"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_gender"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resultGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000ff"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_city"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/resultCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000ff"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>